hopefully fix the background visual bug when scrolling on mobile
if you see more commits then it didn't work

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,6 @@
 html {
-	height: 100%;
+	height: -moz-available;
+    height: stretch;
 }
 
 h1 {
